<resources>
    <string name="app_name">安心车险</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_stop_insure">停保险</string>
    <string name="tab_buy_insure">买保险</string>
    <string name="tab_me">我的</string>
    <string name="shut_insure_str">暂停保费</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="car_insure">车险</string>
    <string name="jiaban_insure">加班险</string>
    <string name="driving_insure">驾驶险</string>
    <string name="line_insure">待扩展</string>


    <string name="my_insure">我的保险</string>
    <string name="my_history_sale">历史报价</string>
    <string name="my_call_plice">我要报案</string>
    <string name="my_money_packet">我的钱包</string>
    <string name="my_share">分享给朋友</string>
    <string name="my_team">我的团队</string>
    <string name="my_clear_cache">清空缓存</string>
    <string name="my_logout">退出登录</string>
    <string name="next_step">下一步</string>

    <string name="scan_code_make_money">分享我，一起来赚钱</string>
    <string name="share_qrcode">把二维码分享给朋友</string>
    <string name="title_activity_timePicker">TimePickerActivity</string>
    <string name="pull_money">立即提现</string>


    <string-array name="carNumberArray">
        <item>川A88888888</item>
        <item>粤A88888888</item>
        <item>京A88888888</item>
        <item>川A88888888</item>
        <item>粤A88888888</item>
        <item>京A88888888</item>
        <item>川A88888888</item>
        <item>粤A88888888</item>
        <item>京A88888888</item>
        <item>川A88888888</item>
        <item>粤A88888888</item>
        <item>京A88888888</item>
    </string-array>

    <string-array name="weekArray">
        <item>每周日</item>
        <item>每周一</item>
        <item>每周二</item>
        <item>每周三</item>
        <item>每周四</item>
        <item>每周五</item>
        <item>每周六</item>
    </string-array>


    <string name="rd_repeat">Repeat</string>
    <string name="rd_daily">Daily</string>
    <string name="rd_weekly">Weekly</string>
    <string name="rd_monthly">Monthly</string>
    <string name="rd_yearly">Yearly</string>
    <string name="rd_none">None</string>
    <string name="rd_every">Every</string>
    <string name="rd_day">day</string>
    <string name="rd_days">days</string>
    <string name="rd_week">week</string>
    <string name="rd_weeks">weeks</string>
    <string name="rd_month">month</string>
    <string name="rd_months">months</string>
    <string name="rd_year">year</string>
    <string name="rd_years">years</string>
    <string name="rd_forever">Forever</string>
    <string name="rd_until">Until</string>
    <string name="rd_until_full">Until a date</string>
    <string name="rd_for">For</string>
    <string name="rd_for_full">For a number of events</string>
    <string name="rd_month_same_day">on the same day each month</string>
    <string name="rd_month_last">on every last %s</string>
    <string name="rd_month_first">on every first %s</string>
    <string name="rd_month_second">on every second %s</string>
    <string name="rd_month_third">on every third %s</string>
    <string name="rd_month_fourth">on every fourth %s</string>
    <string name="rd_event">event</string>
    <string name="rd_events">events</string>
    <string name="server_consultor">服务顾问</string>



    <!--
                ping ++
    -->

    <string name="ok">完成</string>
    <string name="wechat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="upmp">银联</string>
    <string name="bfb">百度钱包</string>
    <string name="jdpay">京东支付</string>
    <string name="confirm">确认</string>
    <string name="yuan">元</string>
    <string name="donateFailMessage">\u3000\u3000感谢你的爱心，\n但是系统出现了一些错误</string>
    <string name="validationErrors">错误</string>
    <string name="notInstalled">未安装支付软件</string>
    <string name="amount">支付金额</string>
    <string name="missingImage">图片加载失败</string>





    <!-- gaode -->
    <string name="weather_forecast_title">天气预报</string>
    <string name="weather_forecast_current">实时天气预报</string>
    <string name="weather_forecast_future">未来天气预报</string>
    <string name="location_title">定位</string>
    <string name="location_net_method">网络（基站+WIFI）定位</string>
    <string name="location_mulity_method">混合定位（GPS+网络）</string>
    <string name="location_gps_method">GPS定位（建议室外使用）</string>
    <string name="location_geofence_method">地理围栏（警戒区域提醒）</string>
    <string name="current_weather_report_title">实时天气</string>
    <string name="future_weather_report_title">天气预报</string>
    <string name="net_location_title">网络定位</string>
    <string name="gps_location_title">GPS定位</string>

    <string name="weather_location">"地      点："</string>
    <string name="weather_weather">"天      气："</string>
    <string name="weather_temperature">"气      温："</string>
    <string name="weather_wind_direction">"风      向："</string>
    <string name="weather_wind_power">"风      力："</string>
    <string name="weather_air_humidity">空气湿度：</string>
    <string name="weather_weather_publish">发布时间：</string>

    <string name="location_latlng">"坐      标："</string>
    <string name="location_accurancy">"精      度："</string>
    <string name="location_method">定位方式：</string>
    <string name="location_time">定位时间：</string>
    <string name="location_description">位置描述：</string>
    <string name="location_country">国&#160;&#160;&#160;&#160;&#160;&#160;家 ：</string>
    <string name="location_province">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;省 ：</string>
    <string name="location_city">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;市   ：</string>
    <string name="location_county">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;区 ：</string>
    <string name="location_road">街&#160;&#160;&#160;&#160;&#160;&#160;道   ：</string>
    <string name="location_poi">POI名称 ：</string>
    <string name="location_city_code">城市编码：</string>
    <string name="location_area_code">区域编码：</string>

    <string name="gpsfollow">追随</string>
    <string name="gpslocate">定位</string>
    <string name="gpsrotate">旋转</string>
    <string name="location_des_open_text">是否打开位置信息描述：</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="geofence_des">点击地图，以点击点为中心建立地理围栏，再次点击地图修改地理围栏位置</string>




    <!--  选中图片-->

    <string name="folder_all">All Images</string>
    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">Select images amount is limit</string>

</resources>
